log/build_2022-02-20_05-22-19/turtle_sim_searcher/stderr.log
  File "/home/facestomperx/colcon_ws/src/turtle_sim_searcher/install/turtle_sim_searcher/lib/python3.8/site-packages/turtle_sim_searcher/grid_searcher.py", line 283
    elif :
         ^
SyntaxError: invalid syntax

